# luminus

./: app.py  constants.py  figure_functions.py  functions.py  layout.py  luminalysis.ipynb  luminalysis_functions.py  pyproject.toml  server.py  tab_layout.py  testcase.csv
data/: centroids_man_input_VEKA.csv  scale_factors.csv
tabs/: archetypes.py  archetypes_template.py  districts.py  frontpage.py
