[tool.poetry]
name = "luminus"
version = "0.1.0"
description = ""
authors = ["Jonas Marien <jonas.marien@vito.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.17.1"
plotly = "^5.22.0"
pandas = "^2.2.2"
dash-bootstrap-components = "^1.6.0"
numpy = "^2.0.1"
geopandas = "^1.0.1"
matplotlib = "^3.9.1"
nbformat = "^5.10.4"
pyarrow = "^17.0.0"
dash-bootstrap-templates = "^1.2.0"
dash-daq = "^0.5.0"
ipykernel = "^6.29.5"
scikit-learn = "^1.5.1"
scipy = "^1.14.0"
mathjax = "^0.1.2"
ace-tools = "^0.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
